--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,6 @@ android {
         versionCode 1
         versionName "1.0"
 
-        buildConfigField "String", "API_KEY", "\"29bb57a21fmsh971770ea1c6d2a3p14da05jsn492b8dd6c6b5\""
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -66,4 +64,7 @@ dependencies {
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    
+    //dependency for google sign-up
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
 }
